--- a/wifi/wpa_supplicant_overlay.conf
+++ b/wifi/wpa_supplicant_overlay.conf
@@ -3,4 +3,5 @@ p2p_disabled=1
 tdls_external_control=1
 wowlan_triggers=magic_pkt
 bss_max_count=512
+bss_no_flush_when_down=1
 driver_param="use_p2p_group_interface=1 no_rrm=1"
