--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -403,6 +403,9 @@ rps_mask=0f
 gEnableDynSplitScan=0
 gEnableLLStats=1
 
+#Disable RTT as recommended by QC
+gEnableRTTSupport=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
