--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -286,8 +286,8 @@ btcStaticLenLeWlan=70000
 gRoamBmissFirstBcnt=25
 gRoamBmissFinalBcnt=35
 
-#Enable Power Save offload
-gEnablePowerSaveOffload=4
+#Enable Optimized Power Management
+gOptimizedPowerManagement=1
 
 END
 
