ysl: Use lineage radio config wrapper
* This lets us have radio.config@1.1 interface while the modem is
  only capable of radio.config@1.0
* Main purpose is to fix RIL after U QPR2, as radio.config@1.0 is
  no longer supported. Switching to radio.config@1.1 directly results
  in broken mobile data switch (Workaround that in telephony framework
  is possible, this way we fix it on AOSP GSIs too)

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -184,6 +184,9 @@ service energy-awareness /system/vendor/bin/energy-awareness
     group system
     oneshot
 
+on property:init.svc.vendor.qcrild=running
+    restart vendor.radio-config-1-1-wrapper
+
 service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
     class main
     user root
