--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -55,7 +55,6 @@ on post-fs
     setrlimit 8 67108864 67108864
     start vendor.qseecomd
     wait_for_prop vendor.sys.listeners.registered true
-    write /dev/ipa 1
 
 on post-fs-data
     mkdir /data/tombstones 0771 system system
@@ -203,6 +202,9 @@ on charger
     start vendor.hvdcp_opti
     start vendor.power_off_alarm
     start thermal-engine
+
+on early-boot
+    write /dev/ipa 1
 
 on boot
     chown system system /sys/kernel/hbtp/display_pwr
