--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -45,10 +45,10 @@ on init
     chmod 0660 /sys/fs/cgroup/memory/bg/tasks
 
     # ZRAM setup
+    swapon_all /vendor/etc/fstab.qcom
     write /sys/block/zram0/comp_algorithm lz4
-    write /sys/block/zram0/disksize 1073741824
-    write /sys/block/zram0/max_comp_streams 8
     write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 60
 
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
@@ -632,7 +632,3 @@ on property:sys.camera.cts.mode=*
 # Add CTS Verifier Flag For Camera
 on property:sys.camera.cts.verifier.mode=*
     setprop vendor.camera.cts.verifier.mode ${sys.camera.cts.verifier.mode}
-	
-
-on property:dev.bootcomplete=1
-    swapon_all /vendor/etc/fstab.qcom
