ysl: Tree-wide cleanup and organize
Signed-off-by: ALprjkt <168145100+ALprjkt@users.noreply.github.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -400,6 +400,12 @@ rps_mask=0f
 
 btcCriticalHidnSniffBlkGuidance=0
 
+#Enable Optimized Power Management
+gOptimizedPowerManagement=1
+
+#Disable mtk ap signal
+gForce1x1Exception=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
