--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -44,10 +44,10 @@ on init
     chmod 0660 /sys/fs/cgroup/memory/bg/tasks
 
     # ZRAM setup
-    swapon_all /vendor/etc/fstab.qcom
+    swapon_all /vendor/etc/fstab.zram
     write /sys/block/zram0/comp_algorithm lz4
     write /proc/sys/vm/page-cluster 0
-    write /proc/sys/vm/swappiness 60
+    write /proc/sys/vm/swappiness 45
 
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
