ysl: Tree-wide cleanup and organize
Signed-off-by: k4ngcaribug <168145100+k4ngcaribug@users.noreply.github.com>

--- a/rro_overlays/CarrierConfigOverlay/AndroidManifest.xml
+++ b/rro_overlays/CarrierConfigOverlay/AndroidManifest.xml
@@ -13,11 +13,12 @@
 <!-- Xiaomi msm8953 specific carrier overlays -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.carrierconfig.xiaomi_msm8953"
+    android:allowBackup="false"
     android:versionCode="1"
     android:versionName="1.0">
     <application android:hasCode="false" />
     <overlay
       android:targetPackage="com.android.carrierconfig"
       android:isStatic="true"
-      android:priority="0"/>
+      android:priority="750"/>
 </manifest>
