--- a/rro_overlays/WifiOverlay/AndroidManifest.xml
+++ b/rro_overlays/WifiOverlay/AndroidManifest.xml
@@ -13,6 +13,7 @@
 <!-- Device specific wifi overlays -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.wifi.resources.xiaomi_msm8953"
+    android:allowBackup="false"
     android:versionCode="1"
     android:versionName="1.0">
     <application android:hasCode="false" />
@@ -20,5 +21,5 @@
       android:targetPackage="com.android.wifi.resources"
       android:targetName="WifiCustomization"
       android:isStatic="true"
-      android:priority="0"/>
+      android:priority="1"/>
 </manifest>
