--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -1,148 +1,87 @@
 # This file allows user to override the factory
-
 # defaults for the WLAN Driver
-
 
 # Enable IMPS or not
 gEnableImps=1
 
 # Enable/Disable Idle Scan
-
 gEnableIdleScan=0
-
 
 # Increase sleep duration (seconds) during IMPS
 # 0 implies no periodic wake up from IMPS. Periodic wakeup is
 # unnecessary if Idle Scan is disabled.
 gImpsModSleepTime=0
 
-
 # Enable BMPS or not
 gEnableBmps=1
 
+# Tune BMPS listening interval
+gBmpsModListenInterval=8
+
 # Enable suspend or not
-
 # 1: Enable standby, 2: Enable Deep sleep, 3: Enable Mcast/Bcast Filter
-
 gEnableSuspend=3
-
 
 # Phy Mode (auto, b, g, n, etc)
 # Valid values are 0-9, with 0 = Auto, 4 = 11n, 9 = 11ac
 gDot11Mode=0
 
-
 # CSR Roaming Enable(1) Disable(0)
-
 gRoamingTime=0
 
-
 # Assigned MAC Addresses - This will be used until NV items are in place
-
 # Each byte of MAC address is represented in Hex format as XX
-
 Intf0MacAddress=000AF58989FF
 Intf1MacAddress=000AF58989FE
-Intf2MacAddress=000AF58989FD
-
-Intf3MacAddress=000AF58989FC
 
 # Set/Clear UAPSD mask
-
 UapsdMask=0
 
 # UAPSD service interval for VO,VI, BE, BK traffic
-
 InfraUapsdVoSrvIntv=20
-
 InfraUapsdViSrvIntv=40
 
 # Flag to allow STA send AddTspec even when ACM is Off
 gAddTSWhenACMIsOff=1
 
 # Make 1x1 the default antenna configuration
-
 gNumRxAnt=1
 
-
 # Beacon filtering frequency (unit in beacon intervals)
-
 gNthBeaconFilter=50
 
-
 # Enable WAPI or not
-
 # WAPIIsEnabled=0
 
-
-# Flags to filter Mcast abd Bcast RX packets.
-
-# Value 0: No filtering, 1: Filter all Multicast.
-
-# 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
-
-McastBcastFilter=3
-
-
 #Flag to enable HostARPOffload feature or not
-
 hostArpOffload=1
 
-
 #SoftAP Related Parameters
-
 # AP MAc addr
-
 gAPMacAddr=000AF589dcab
 
-
 # 802.11n Protection flag
-
 gEnableApProt=1
 
-
 #Enable OBSS protection
-
 gEnableApOBSSProt=1
 
-
 #Enable/Disable UAPSD for SoftAP
-
 gEnableApUapsd=1
 
-
-# Fixed Rate
-
-gFixedRate=0
-
-
-# Maximum Tx power
-
-# gTxPowerCap=30
-
-
 # Fragmentation Threshold
-
 # gFragmentationThreshold=2346
 
-
 # RTS threshold
-
 RTSThreshold=2347
 
-
 # Intra-BSS forward
-
 gDisableIntraBssFwd=0
 
-
 # WMM Enable/Disable
-
 WmmIsEnabled=0
 
-
 # 802.11d support
-
 g11dSupportEnabled=0
 
 # CCX Support and fast transition
@@ -153,8 +92,7 @@ gNeighborScanTimerPeriod=200
 
 # default value of this parameter is zero to enable dynamic threshold allocation
 # to set static roming threshold uncomment below parameter and set vaule
-#gNeighborLookupThreshold=78
-
+gNeighborLookupThreshold=85
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
 
@@ -169,115 +107,57 @@ FastRoamEnabled=1
 RoamRssiDiff=5
 
 # SAP Country code
-
 # Default Country Code is 2 bytes, 3rd byte is optional indoor or out door.
-
 # Example
-
 #   US Indoor, USI
-
 #   Korea Outdoor, KRO
-
 #   Japan without optional byte, JP
-
 #   France without optional byte, FR
-
 #gAPCntryCode=USI
 
-
 #Short Guard Interval Enable/disable
-
 gShortGI20Mhz=1
-
 gShortGI40Mhz=1
 
-
-#Auto Shutdown  Value in seconds. A value of 0 means Auto shutoff is disabled
-
-gAPAutoShutOff=0
-
-
-# SAP auto channel selection configuration
-
-# 0 = disable auto channel selection
-
-# 1 = enable auto channel selection, channel provided by supplicant will be ignored
-
-gApAutoChannelSelection=0
-
-
 # Listen Energy Detect Mode Configuration
-
 # Valid values 0-128
-
 # 128 means disable Energy Detect feature
-
 # 0-9 are threshold code and 7 is recommended value from system if feature is to be enabled.
-
 # 10-128 are reserved.
-
 # The EDET threshold mapping is as follows in 3dB step:
-
 # 0 = -60 dBm
-
 # 1 = -63 dBm
-
 # 2 = -66 dBm
-
 # ...
-
 # 7 = -81 dBm
-
 # 8 = -84 dBm
-
 # 9 = -87 dBm
-
 # Note: Any of these settings are valid. Setting 0 would yield the highest power saving (in a noisy environment) at the cost of more range. The range impact is approximately #calculated as:
-
 #
-
 #  Range Loss  (dB)  =  EDET threshold level (dBm) + 97 dBm.
-
 #
-
 gEnablePhyAgcListenMode=128
 
-
 #Preferred channel to start BT AMP AP mode (0 means, any channel)
-
 BtAmpPreferredChannel=0
 
-
 #Preferred band (both or 2.4 only or 5 only)
-
 BandCapability=0
 
-
 #Beacon Early Termination (1 = enable the BET feature, 0 = disable)
-
 enableBeaconEarlyTermination=1
-
 beaconEarlyTerminationWakeInterval=11
 
-
 #Bluetooth Alternate Mac Phy (1 = enable the BT AMP feature, 0 = disable)
-
 gEnableBtAmp=0
 
-
 #SOFTAP Channel Range selection
-
 gAPChannelSelectStartChannel=1
-
-gAPChannelSelectEndChannel=11
-
+gAPChannelSelectEndChannel=13
 
 #SOFTAP Channel Range selection Operating band
-
 # 0:2.4GHZ 1: LOW-5GHZ 2:MID-5GHZ 3:HIGH-5GHZ 4: 4.9HZ BAND
-
 gAPChannelSelectOperatingBand=0
-
 
 #Channel Bonding
 gChannelBondingMode5GHz=1
@@ -288,9 +168,7 @@ gMaxLIModulatedDTIM = 3
 gEnableDatainactivity = 200
 
 #Enable Keep alive with non-zero period value
-
 gStaKeepAlivePeriod=30
-
 
 #Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
 #For every 10 seconds DUT sends Qos Null frame(i.e., Keep Alive frame if link is idle for last 10 seconds.)
@@ -313,24 +191,13 @@ gStaKeepAlivePeriod=30
 #gGoKeepAlivePeriod/gApKeepAlivePeriod is time to spend to check whether frame are succeed to send or not.
 #Hence total effective detection time is gGoLinkMonitorPeriod+ gGoKeepAlivePeriod/gApLinkMonitorPeriod+ gApKeepAlivePeriod.
 gGoKeepAlivePeriod = 10
-
 gApKeepAlivePeriod = 30
-#If set will start with active scan after driver load, otherwise will start with
-
-#passive scan to find out the domain
-
-#gEnableBypass11d=1
-
 
 #If set to 0, will not scan DFS channels
-
 gEnableDFSChnlScan=1
-
 gEnableLogp=1
 
-
 # Enable Automatic Tx Power control
-
 gEnableAutomaticTxPowerControl=0
 
 # 0 for OLPC 1 for CLPC and SCPC
@@ -343,12 +210,10 @@ gEnableLpwrImgTransition=1
 
 # Scan Timing Parameters
 # gPassiveMaxChannelTime=110
-# gPassiveMinChannelTime=60
 # Enable Tx LDPC
 #gTxLdpcEnable = 1 for HT mode, 2 for VHT mode,3 for both HT and VHT
 gTxLdpcEnable=3
 # gActiveMaxChannelTime=40
-# gActiveMinChannelTime=20
 
 # Valid values are 2048,4096,8192 and so on
 # Please don't use values other than the ones mentioned above
@@ -403,7 +268,27 @@ rps_mask=0f
 gEnableDynSplitScan=0
 gEnableLLStats=1
 
+#Disable RTT as recommended by QC
+gEnableRTTSupport=0
+
+#Skip DFS Channel in case of P2P Search
+# 0 - disable (Scan DFS Channel in P2P Search)
+# 1 - enable (Skip DFS Channel)
+gSkipDfsChannelInP2pSearch=0
+
+# BlueTooth co-existence parameters 
+# static time occupied for BLE and WLAN, default value of btcStaticLenLeBt is
+# 120000 (120ms) and default value of btcStaticLenLeWlan is 30000 (30ms)
+btcStaticLenLeBt=80000
+btcStaticLenLeWlan=70000
+
+# TheCrazyLex@PA set beacon missed count threshold to improve stability
+gRoamBmissFirstBcnt=25
+gRoamBmissFinalBcnt=35
+
+#Enable Optimized Power Management
+gOptimizedPowerManagement=1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
-
